# Quick

./: .gitignore  CMakeLists.txt
assets/: sg.glb
src/: main.c
src/engine/: camera.c  camera.h  game.c  game.h  gun.c  gun.h  object.c  object.h  player.c  player.h  terrain.c  terrain.h  world.c  world.h
